--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,3 +81,5 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=30000
 
+#Game winrate
+game.win-rate=5
